--- a/Buform.FluentValidation/Buform.FluentValidation.csproj
+++ b/Buform.FluentValidation/Buform.FluentValidation.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="MSBuild.Sdk.Extras/3.0.44" ToolsVersion="15.0">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;Xamarin.iOS10</TargetFrameworks>
         <LangVersion>default</LangVersion>
         <Nullable>enable</Nullable>
         <RootNamespace>Buform</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="FluentValidation" Version="10.4.0" />
+      <PackageReference Include="FluentValidation" Version="11.0.1" />
     </ItemGroup>
 
     <ItemGroup>
