--- a/Buform.FluentValidation/Buform.FluentValidation.csproj
+++ b/Buform.FluentValidation/Buform.FluentValidation.csproj
@@ -5,6 +5,23 @@
         <LangVersion>default</LangVersion>
         <Nullable>enable</Nullable>
         <RootNamespace>Buform</RootNamespace>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageId>SByteDev.Buform.FluentValidation</PackageId>
+        <PackageVersion>0.0.1</PackageVersion>
+        <Title>Buform.FluentValidation</Title>
+        <Description>FluentValidation support for Buform.</Description>
+        <Copyright>SByteDev</Copyright>
+        <Authors>Prin53, SByteDev</Authors>
+        <Owners>Prin53, SByteDev</Owners>
+        <NeutralLanguage>en</NeutralLanguage>
+        <PackageTags>xamarin, forms, form, fluentvalidation</PackageTags>
+        <PackageProjectUrl>https://github.com/SByteDev/Buform</PackageProjectUrl>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageReleaseNotes>This is a first version of Buform.FluentValidation.</PackageReleaseNotes>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/SByteDev/Buform</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
