--- a/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
+++ b/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
@@ -131,6 +131,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Buform.ColorPicker\Buform.ColorPicker.csproj" />
         <ProjectReference Include="..\Buform.FluentValidation\Buform.FluentValidation.csproj" />
         <ProjectReference Include="..\Buform\Buform.csproj" />
         <ProjectReference Include="..\Buform.Example.MvvmCross.Core\Buform.Example.MvvmCross.Core.csproj" />
