--- a/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
+++ b/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
@@ -110,7 +110,7 @@
 
     <ItemGroup>
         <Compile Include="AppDelegate.cs" />
-        <Compile Include="ControlsViewController.cs" />
+        <Compile Include="ComponentsViewController.cs" />
         <Compile Include="CreateEventViewController.cs" />
         <Compile Include="CreateConnectionViewController.cs" />
         <Compile Include="MenuViewController.cs" />
