--- a/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
+++ b/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
@@ -97,6 +97,8 @@
     <ItemGroup>
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
         <ImageAsset Include="Assets.xcassets\Contents.json" />
+        <ImageAsset Include="Assets.xcassets\Logo.imageset\Contents.json" />
+        <ImageAsset Include="Assets.xcassets\Logo.imageset\Logo.pdf" />
         <ImageAsset Include="Assets.xcassets\Main.colorset\Contents.json" />
     </ItemGroup>
 
@@ -122,7 +124,7 @@
         <PackageReference Include="FluentValidation" Version="11.0.1" />
         <PackageReference Include="Humanizer.Core" Version="2.14.1" />
         <PackageReference Include="MvvmCross" Version="8.0.2" />
-        <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" PrivateAssets="All" />
+        <PackageReference Include="PropertyChanged.Fody" Version="3.4.1" PrivateAssets="All" />
         <PackageReference Include="SByteDev.Common.Extensions" Version="1.0.6" />
         <PackageReference Include="SByteDev.Xamarin.iOS.Extensions" Version="1.0.6" />
         <PackageReference Include="Serilog" Version="2.11.0" />
