Set example app icon

--- a/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
+++ b/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
@@ -96,6 +96,24 @@
 
     <ItemGroup>
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-1024.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-120.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-121.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-152.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-167.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-180.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-20.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-29.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-40.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-41.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-42.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-58.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-59.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-60.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-76.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-80.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-81.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-87.png" />
         <ImageAsset Include="Assets.xcassets\Contents.json" />
         <ImageAsset Include="Assets.xcassets\Logo.imageset\Contents.json" />
         <ImageAsset Include="Assets.xcassets\Logo.imageset\Logo.pdf" />
