--- a/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
+++ b/Buform.Example.MvvmCross.iOS/Buform.Example.MvvmCross.iOS.csproj
@@ -116,7 +116,8 @@
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-87.png" />
         <ImageAsset Include="Assets.xcassets\Contents.json" />
         <ImageAsset Include="Assets.xcassets\Logo.imageset\Contents.json" />
-        <ImageAsset Include="Assets.xcassets\Logo.imageset\Logo.pdf" />
+        <ImageAsset Include="Assets.xcassets\Logo.imageset\Logo@2x.png" />
+        <ImageAsset Include="Assets.xcassets\Logo.imageset\Logo@3x.png" />
         <ImageAsset Include="Assets.xcassets\Main.colorset\Contents.json" />
     </ItemGroup>
 
