Add the wrapper class for the header footer view

--- a/Buform.Forms/Buform.Forms.csproj
+++ b/Buform.Forms/Buform.Forms.csproj
@@ -42,6 +42,7 @@
     <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
         <Compile Include="BuformFormsIos.cs" />
         <Compile Include="FormViewRendererIos.cs" />
+        <Compile Include="TableViewHeaderFooterView.cs" />
     </ItemGroup>
 
 </Project>
