Make all classes and files names according to the template

--- a/Buform.Forms/Buform.Forms.csproj
+++ b/Buform.Forms/Buform.Forms.csproj
@@ -41,7 +41,7 @@
 
     <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
         <Compile Include="BuformFormsIos.cs" />
-        <Compile Include="FormsTableViewSource.cs" />
+        <Compile Include="FormsFormTableViewSource.cs" />
         <Compile Include="TableViewHeaderFooterView.cs" />
         <Compile Include="FormViewRendererIos.cs" />
     </ItemGroup>
